openshift/openshift-olm.yml
# Create a namespace
cat <<EOF | oc create -f -
apiVersion: v1
kind: Namespace
metadata:
  name: lab-mace
EOF

cat <<EOF | oc create -f -
apiVersion: v1
kind: ServiceAccount
metadata:
  name: lab-mace
  namespace: lab-mace
EOF

cat <<EOF | oc create -f -
apiVersion: rbac.authorization.k8s.io/v1
kind: Role
metadata:
  name: lab-mace
  namespace: lab-mace
rules:
- apiGroups: ["*"]
  resources: ["*"]
  verbs: ["*"]
