openshift/openshift-nginx2-pvc.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-pod
  labels:
    name: nginx-pod
spec:
  replicas: 2
  selector:
     matchLabels:
       app: nginx-pod
  template:
    metadata:
      labels:
        app: nginx-pod
        tier: frontend
    containers:
    - name: nginx-pod
      image: gcr.io/google_containers/nginx-slim:0.8
      resources:
        requests:
          cpu: 250m
          memory: 128Mi
        limits:
          cpu: 500m
          memory: 384Mi
      ports:
      - name: web
        containerPort: 80
      securityContext:
        privileged: true
      volumeMounts:
      - name: gluster-vol1
        mountPath: /usr/share/nginx/html
    volumes:
    - name: gluster-vol1
      persistentVolumeClaim:
        claimName: gluster1
