openshift/test-app-ingress.yml
---
# Create a namespace
apiVersion: v1
kind: Namespace
metadata:
  name: ns-ingress

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test
  namespace: ns-ingress
  labels:
    app: test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: test
  template:
    metadata:
      labels:
        app: test
    spec:
      containers:
      - name: mtls-test
        # image: ibmcom/hello
        image: openshift/hello-openshift
        imagePullPolicy: Always
        resources:
          requests:
            cpu: 250m
            memory: 128Mi
          limits:
            cpu: 500m
            memory: 384Mi
        ports:
        - name: http
          containerPort: 8080
          protocol: TCP
        livenessProbe:
          httpGet:
            path: /
            port: http
        readinessProbe:
          httpGet:
            path: /
            port: http

---
apiVersion: v1
kind: Service
metadata:
  name: hello-openshift
  namespace: ns-ingress
  labels:
    app: test
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: test

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-openshift
  annotations:
    route.openshift.io/termination: "edge"
  labels:
    app: test
  namespace: ns-ingress
spec:
  tls:
    - hosts:
        - iro-483cccd2f0d38128dd40d2b711142ba9-0000.eu-de.containers.appdomain.cloud
      secretName: iro-483cccd2f0d38128dd40d2b711142ba9-0000
  rules:
    - host: iro-483cccd2f0d38128dd40d2b711142ba9-0000.eu-de.containers.appdomain.cloud
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hello-openshift
                port:
                  number: 8080
